# contact-details-qr-code

./: Cargo.toml  README.md
src/: lib.rs
