[package]
version = "0.1.0"
name = "contact-details-qr-code"
authors = ["Stuart Roebuck <stuart.roebuck@gmail.com>"]
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
chrono = { version ="0.4.12", features = ["wasmbind"] }
phonenumber = "0.2.4+8.11.3"
qrcodegen = "1.6.0"
# This commit points to Seed 0.7.0 with important fixes.
# Replace with `seed = "0.8.0"` (or newer) once released.
seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
